# CodeJournal

./: .gitignore  .gitmodules  README.md
450_dsa/: coin_change_problem.cpp
codeforces/CodeforcesCodeforcesRound166Div.2/: A_BeautifulYear.cpp
codeforces/CodeforcesCodeforcesRound811Div.3/: A_EveryoneLovestoSleep.cpp
codeforces/CodeforcesExperimentalEducationalRoundVolBITFormulasBlitz/: A_AgainTwentyFive.cpp
codeforces/CodeforcesSheet2Loops/: Z_ThreeNumbers.cpp
cses_problem_set/graph_algorithms/: building_roads.cpp  counting_rooms.cpp  message_route.cpp
cses_problem_set/introductory_problems/: increasing_array.cpp  missing_number.cpp  number_spiral.cpp  permutations.cpp  repetitions.cpp  trailing_zeros.cpp  two_sets.cpp  weird_algorithm  weird_algorithm.cpp
cses_problem_set/range_queries/: dynamic_range_minimum_queries.cpp  dynamic_range_sum_queries.cpp  static_range_minimum_queries.cpp  static_range_sum_queries.cpp
cses_problem_set/sorting_and_searching/: apartments.cpp  concert_tickets.cpp  distinct_numbers.cpp  ferris_wheel.cpp
dsa_code/: CMakeLists.txt  build.sh  fenwick_tree.cpp  graphs.cpp  linked_list.cpp  linked_list.h  segment_trees.cpp  sqrt_decomposition.cpp
dsa_code/tests/: linked_list_tests.cpp
leetcode/easy/: 1472_Design_Browser_History.cpp  1475_Final Prices With a Special Discount in a Shop.cpp  160_Intersection_of_Two_Linked_Lists.cpp  203_Remove_Linked_List_Elements.cpp  234_Palindrome_Linked_List.cpp  2487_Remove_Nodes_From_Linked_List.cpp  2_Add_Two_Numbers.cpp  496_Next_Greater_Element_I.cpp  Min_Cost_Climbing_Stairs.cpp
(+20 files in other folders)
